--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                         <p>RBG Colour Game</p>
                     </div>
                      <div class="work__img">
-                        <img src="assets/img/colourGame3.jpg" alt="">
-                        <p>RBG Colour Game</p>
+                        <img src="assets/img/pathFinder.jpg" alt="">
+                        <p>Path Finder</p>
                     </div>
                     <div class="work__img">
                         <img src="assets/img/pictureGame.jpg" alt="">
