--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <h2 class="about__subtitle">I'm Jino</h2>
                         <p>I have studied at <a href="https://www.hyperiondev.com/"> HyperionDev</a>, I completed a software engineering course which included Python, Java, MySQL, part of the course included creating real-world projects and gaining a lot of experience and knowledge in the programming languages and their frameworks and libraries.</p>
 
-                        <p>I prefer to work smart and not hard, I am passionate and competitive, once I am interested in something I become fixated with it. I learn quickly and intuitively. I like to think out of the box and find the most efficient way to do things. I have a desire to help improve people's lives and I believe that being a software engineer puts me on that path. I am interested in developing software that 
+                        <p>I am passionate and competitive, once I am interested in something I become fixated with it. I learn quickly and intuitively. I like to think out of the box and find the most efficient way to do things. I have a desire to help improve people's lives and I believe that being a software engineer puts me on that path. I am interested in developing software that 
                         can be used in everyone's daily life as well as benefit businesses and their productivity. </p>
 
                         <p>I believe in the value of teamwork, being an exceptional football player, winning a host of individual and team awards was not accomplished on my own but with the help of my teammates. I have great leadership skills being the captain of my football team as well
