--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
                         <img src="assets/img/Udemy_Certificate.jpg" alt="">
                         <p>Udemy Web Development Certificate</p>
                     </div>
+                    <div class="work__img">
+                        <img src="assets/img/blogs.jpg" alt="">
+                        <a href="https://concurrencyblogjino.blogspot.com/">Blogs</a>
+                    </div>                                                      
                     
             </section>
              
