--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/jino-rigney-b78a78193/" "target="_blank" " class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/in/jino-rigney-b78a78193/" target="_blank" " class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     
                     <a href="https://github.com/Jino-R" class="home__social-icon" target="_blank"><i class='bx bxl-github' ></i></a>
                     
@@ -194,7 +194,7 @@
                         <p>Pycharm Picture Game</p>
                     </div>
                     <div class="work__img">
-                        <a href="https://concurrencyblogjino.blogspot.com/">
+                        <a href="https://concurrencyblogjino.blogspot.com/" target="_blank">
                           <img src="assets/img/blogs.jpg" alt="">  
                         </a>
                         <a href="https://concurrencyblogjino.blogspot.com/" target="_blank">Link to Blogs</a>
